# DiffPriv

./: .coveragerc  .deepsource.toml  .gitignore  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.m  CONTRIBUTING.md  README.md  SECURITY.md  SUMMARY.md  __init__.py  _config.yml  contributing.md  em-encrypted_test.csv  index.md  key.csv  lm-encrypted_test.csv  porta_test.txt  private.py  requirements.txt  routput.txt  setup.cfg  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/issue_template/: bug.md  feature.md
.github/workflows/: claim.yml  codeql-analysis.yml  coverage.yml  mod.yml  python-publish.yml  test.yml
DiffPriv/: __init__.py  cli.py  diff.py  enc.py  lap-mechanism.py  private.py
DiffPriv/mech/: __init__.py  main.py  pre.py  utils.py  validate.py
docs/: CONTRIBUTING.md  DiffPriv.html  Exponential Mechanism.rst  Install.rst  Laplace Mechanism.rst  Random Response.rst  conf.py  index.html  index.rst  search.json
docs/DiffPriv/: cli.html  diff.html  enc.html
scripts/: release.py
tests/: cli_test.py  em-test.csv  enc-test.py  enc_test.py  init_test.py  lapmech_test.py  private_test.py  randresponse_test.py  sss_test.py  test_data.csv
tests/mech/: v2a1_test.py  v2a3_test.py
v2a1/: DiffPriv.html  search.js
v2a1/DiffPriv/: diff.html  enc.html  mech.html
v2a1/DiffPriv/mech/: main.html  pre.html  utils.html  validate.html
v2a2/: DiffPriv.html  index.html  search.js
v2a2/DiffPriv/: cli.html
v2a2/DiffPriv/mech/: pre.html
v2a3/: DiffPriv.html  index.html  search.js
v2a3/DiffPriv/: diff.html  mech.html
v2a3/DiffPriv/mech/: main.html  pre.html  validate.html
