[metadata]
name = DiffPriv
version = v1.0.0-alpha
author = Quantalabs
description = A Differential Privacy Package
url = https://github.com/Quantalabs/DiffPriv
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
project_urls =
    Documentation = https://quantalabs.github.io/DiffPriv/docs/
    Source = https://github.com/Quantalabs/DiffPriv
    Tracker = https://github.com/Quantalabs/DiffPriv/issues
    Changelog = https://quantalabs.github.io/DiffPriv/CHANGELOG
    Download = https://pypi.org/project/DiffPriv/#files

[options]
python_requires =  >= 3.8.1

[options.entry_points]
console_scripts = diffpriv=DiffPriv.cli:run