[metadata]
name = DiffPriv
version = v2.0.0b1
author = Quantalabs
description = A Differential Privacy Package
url = https://github.com/Quantalabs/DiffPriv
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
project_urls =
    Documentation = https://quantalabs.github.io/DiffPriv/docs/
    Source = https://github.com/Quantalabs/DiffPriv
    Tracker = https://github.com/Quantalabs/DiffPriv/issues
    Changelog = https://quantalabs.github.io/DiffPriv/CHANGELOG
    Download = https://pypi.org/project/DiffPriv/#files
    Code Coverage = https://app.codecov.io/gh/Quantalabs/DiffPriv
    Forum = https://github.com/Quantalabs/DiffPriv/discussions
    Conda Forge = https://anaconda.org/conda-forge/diffpriv

[options]
packages = find:
python_requires =  >= 3

[options.entry_points]
console_scripts = diffpriv=DiffPriv.cli:run